fix(table): removed overflow

--- a/components/table.scss
+++ b/components/table.scss
@@ -1,3 +1,5 @@
+// TODO: remove padding overflow
+
 .hdd-table {
   $b: #{&};
   width: 100%;
@@ -130,7 +132,6 @@
   &.has-shadow {
     @include box-shadow($shadow-medium);
 
-    overflow: hidden;
     border-radius: 5px;
   }
 }
